additional task (2) add delete segments scheduler (TTL)
